# mediahab

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_RU.md  SPEC_MANIFEST.json  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt
codex/: 00_START_HERE_EN.md  00_START_HERE_RU.md
docs/: OPEN_QUESTIONS.md
fixtures/: example-import-template.json  telegram-donika.json
services/api/: alembic.ini  pyproject.toml  requirements.txt
services/api/app/: main.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/routes/: admin.py  ai.py  auth.py  billing.py  content.py  health.py  me.py  projects.py  publications.py  workspaces.py
services/api/app/core/: config.py  logging.py
services/api/app/db/: base.py
services/api/app/modules/ai/: __init__.py  providers.py  service.py
services/api/app/modules/auth/: dependencies.py  rate_limit.py  security.py
services/api/app/modules/billing/: catalog.py  providers.py  service.py
services/api/app/modules/content/: __init__.py  service.py
services/api/app/modules/projects/: __init__.py  presets.py  schema_builder.py  service.py
services/api/app/modules/publications/: __init__.py  connectors.py  service.py
services/api/app/modules/shared/: __init__.py  errors.py
services/api/tests/: test_ai_examples_pipeline.py  test_auth_workspace_billing.py  test_content_media_voice.py  test_health.py  test_instagram_connector.py  test_max_connector.py  test_project_rubric_builder.py  test_publication_core.py  test_telegram_connector.py
(+429 files in other folders)
